= Version History =
2.5 (2013-04-05):

- added: auto join groups based on email invitation when joining the site
- added: different group ACL fixes
- fixed: problem with email invites from hidden groups
- fixed: in some cases email invites weren't saved
- changed: auto notifications now listen to $NOTIFICATION_HANDLERS
- changed: handling of invitations page
- changed: layout of actions
- removed: group creation limited to admins (Elgg core now offers this option)

2.4 (2012-11-06):

- added: filter groups based on a tag field in index_group widget
- fixed: problem with group invite autocomplete on subfolder Elgg installations (thanks to Bruno Grossmann http://community.elgg.org/profile/bruno)
- fixed: unable to edit a group as a normal user when limiting group creation (thanks to buraddo http://community.elgg.org/profile/buraddo)
- changed: group invitations (and add) no always goto mail
- changed: some logic when (re)inviting for better system messages to the users 
- changed: discussion dasboard widget ordering to be inline with default Elgg
- changed: layout of start.php to be more inline with Elgg

2.3 (2012-07-31):

- added: discussion widget from widget manager
- added: group_forum_topics widget from widget manager
- added: group_news widget from widget manager
- added: index_groups widget from widget manager
- added: group sidebar cleanup feature
- added: group profile fallback handling (error on old group profile link & redirect)
- added: group default access (if https://github.com/Elgg/Elgg/pull/253 is applied)
- added: admin action to enable/disable group notifications
- added: option to show the group members in the group related index widgets
- removed: index_discussions widget
- fixed: deprecated notice in invitations overview
- fixed: url error in invitation
- fixed: PHP wanring in group_river_widget
- fixed: pagination in group members sidebar
- fixed: invite autocomplete not using default autocomplete features
- fixed: forum topics widget ordering