@@ -143,6 +143,8 @@ To visit the group please click on the following link:
 		'group_tools:cleanup:featured_sorting' => "How to sort featured groups",
 		'group_tools:cleanup:featured_sorting:time_created' => "Newest first",
 		'group_tools:cleanup:featured_sorting:alphabetical' => "Alphabetical",
+		'group_tools:cleanup:my_status' => "Hide the My Status sidebar",
+		'group_tools:cleanup:my_status:explain' => "In the sidebar on the group profile page there is an item which shows you your current membership status and some other status information. You can choose to hide this.",
 
 		// group default access
 		'group_tools:default_access:title' => "Group default access",
