@@ -1,4 +1,8 @@
 = Version History =
+x.x:
+
+- added: option to hide the My Status sidebar
+
 2.5 (2013-04-05):
 
 - added: auto join groups based on email invitation when joining the site
